adding sending email functionality

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             
             <div class="row">
                
-                    <form action="#" class="contact-form">
+                    <form action="#" class="contact-form" method="post" >
                     <div class="row">
                         <div class="col span_1_of_3">
                             <label for="name">Name</label>
@@ -368,7 +368,7 @@
                             <label>&nbsp;</label>
                         </div>
                      <div class="col span_2_of_3">
-                         <input  type="submit" value="Send it!">
+                         <input  type="submit" value="Send it!"  id="btnSubmit">
                      </div>
                      </div>
                 </form>   
