--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                    <li><a href="#gallery" id="galleryMenuItem">Gallery</a></li>
                    <li><a href="#location" id="locationMenuItem">Our location</a></li>
                    <li><a href="#admissionInfo" id="admissionInfoMenuItem">Admission information</a></li>
-                   <li><select name="lang" id="lang" required>                               
+                   <li><select name="lang" id="lang" required>
+                           <option value="">&nbsp;</option>                               
                            <option value="bn" selected>বাঙলা</option>
                            <option value="en" >English</option>
                        </select>
