--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://mtcspallabi.github.io" />
         <meta property="og:image" content="https://mtcspallabi.github.io/resources/img/mcts.jpg" />
+        <meta property="og:image:width" content="600" />
+        <meta property="og:image:height" content="315" />
         <meta property='og:site_name' content='MTCS' />
         <meta property="og:description" content="Copyright &copy; 2020 by MTCS. All rights reserved. Courtesy- Jonas Schedmann." />
         
