--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
        </nav>
        
         <div class="hero-text-box">
-            <h1 id="dialogue-header">Your child, it's our responsibility <br>to develop his/her intellect.</h1>
+            <h1 id="dialogue-header">Your child, it's our responsibility to develop his/her intellect.</h1>
             <a class="btn btn-full js--scroll-to-plans" href="#" id="header-button-1">I'm interested</a>
             <a class="btn btn-ghost js--scroll-to-start" href="#" id="header-button-2">Show me more</a>
             
