added scrolling notice pop-up

--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@
                         </p>
 
                    </div>
+                    </div>
                    <div class="row">
                    <div class="notice">
                        <div class="search-center"><h3>Date: 09-Feb-2020</h3></div>
