resolving animation npoblem

--- a/index.html
+++ b/index.html
@@ -251,15 +251,15 @@
                 <h2 id="testimonial_h2_1">Guardian's opinion about us.</h2>
             </div>
             <div class="row">
-                <div class="col span_1_of_3">
+                <div class="col span_1_of_3 js--wp-4">
                     <blockquote id="testimonial_bq_1">Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor</blockquote>
                     <cite><img src="resources/img/guardian-1.jpg" alt="Kuddus"> <span id="testimonial_span_1">Abdul Kuddus </span></cite>
                 </div>
-                <div class="col span_1_of_3">
+                <div class="col span_1_of_3 js--wp-5">
                     <blockquote id="testimonial_bq_2">Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor</blockquote>
                     <cite><img src="resources/img/guardian-2.jpg" alt="Costa"> <span id="testimonial_span_2">Jerin Gomez</span></cite>
                 </div>
-                <div class="col span_1_of_3">
+                <div class="col span_1_of_3 js--wp-6">
                     <blockquote id="testimonial_bq_3">Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor imit Lorem ipsum dolor</blockquote>
                     <cite><img src="resources/img/guardian-3.jpg" alt="Das"><span id="testimonial_span_3">Subal Das</span></cite>
                 </div>
