--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                            <option value="en" >English</option>
                        </select>
                    </li>
-                   <li><div class="g-signin2" data-onsuccess="onSignIn"></div></li>
+<!--                   <li><div class="g-signin2" data-onsuccess="onSignIn"></div></li>-->
                </ul>
                <a  class="mobile-nav-icon js--nav-icon">
                    <i class="icon ion-android-menu"></i>
