bangla translation in notice section

--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
                         </div>
                         <div>
                             <ul>
-                                <li><i class="icon ion-checkmark-circled icon-small"></i> <span id="plan1_span_1">Books, diary , exercise book, Id card included</span></li>
-                                <li>&nbsp;</li>
+                                <li><i class="icon ion-checkmark-circled icon-small"></i> <span id="plan1_span_1">Books, diary , exercise book, Id card included</span></li><br>
+                                
                             </ul>
                         </div>
                         <div><a href="#" class="btn btn-full js--scroll-to-location" id="plan1_a_1"> Contact now</a></div>
@@ -297,8 +297,8 @@
                         </div>
                         <div>
                             <ul>
-                                <li><i class="icon ion-checkmark-circled icon-small"></i><span id="plan2_span_1">Books, diary , exercise book, Id card included</span></li>
-                                <li>&nbsp;</li>
+                                <li><i class="icon ion-checkmark-circled icon-small"></i><span id="plan2_span_1">Books, diary , exercise book, Id card included</span></li><br>
+                                
                             </ul>
                         </div>
                         <div><a href="#" class="btn btn-ghost js--scroll-to-location" id="plan2_a_1"> Contact now</a></div>
