added media query for the animated button

--- a/index.html
+++ b/index.html
@@ -350,7 +350,8 @@
             
             <div class="row">
                
-                    <form action="#" class="contact-form" method="post"  >
+<!--                    <form action="#" class="contact-form" method="post"  >-->
+                   <form action="mailto:mtcs@gmail.com" method="GET" target="_blank">
                     <div class="row">
                         <div class="col span_1_of_3">
                             <label for="name" id="form_name">Name</label>
