added facebook link

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                    </div>
                    <div class="address-feature">
                      <i class="icon ion-social-facebook icon-small"></i>
-                        <a href="https://www.facebook.com/Mother-Teresa-Catholic-School-364143654430228/" target="_blank">Mother-Teresa-Catholic-School</a>
+                        <a href="https://www.facebook.com/Mother-Teresa-Catholic-School-364143654430228/" target="_blank">Mother Teresa Catholic School</a>
                    </div>
                    
                </div>
