--- a/form-validation.html
+++ b/form-validation.html
@@ -16,6 +16,17 @@
       }
 */
 
+        
+
+.pswp__zoom-wrap {
+  text-align: center;
+  &:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+  }
+}
 
 .wrapper {
   line-height: 0;
@@ -38,7 +49,7 @@
 }
 .video-wrapper iframe {
   position: absolute;
-  top: 0;
+  top: 10%;
   left: 0;
   width: 100%;
   height: 100%;
@@ -62,6 +73,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/default-skin/default-skin.min.css">
 
      <link rel="stylesheet" href="resources/css/style.css">
+     <link rel="stylesheet" href="resources/css/query.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.js"></script>
