--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <!-- Magnific Popup core CSS file -->
         <link rel="stylesheet" href="vendors/css/magnific-popup.css">
        
+        <!-- <link rel="stylesheet" type="text/css" href="resources/css/compiles-sass.css"> -->
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <link rel="stylesheet" type="text/css" href="resources/css/query.css">
         
@@ -71,7 +72,7 @@
         <meta name="theme-color" content="#ffffff">
     </head>
     <body>
-       <header>
+       <header class="header">
        <nav>
            <div class="row">
                <a href="/">
