updated image gallery

--- a/index.html
+++ b/index.html
@@ -218,27 +218,27 @@
 
                 <li>
                     <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                       <a href="resources/img/gallery-1.jpg" title="School Coridor" itemprop="contentUrl" data-size="1024x768"> 
+                       <a href="resources/img/gallery-1.jpg" title="School premises (front view)" itemprop="contentUrl" data-size="1024x768"> 
                        <img src="resources/img/gallery-1.jpg" alt="Gallery-1" itemprop="thumbnail">
                        </a>
-                       <figcaption itemprop="caption description">School Coridor</figcaption>
+                       <figcaption itemprop="caption description">School Premises (front view)</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                        <a href="resources/img/gallery-2.jpg" title="Sisimpur Gift Book" itemprop="contentUrl" data-size="1024x768"> 
+                        <a href="resources/img/gallery-2.jpg" title="School premises (rear view)" itemprop="contentUrl" data-size="1024x768"> 
                         <img src="resources/img/gallery-2.jpg" alt="Gallery-2" itemprop="thumbnail"> 
                         </a>
-                        <figcaption itemprop="caption description">Sisimpur Gift Book</figcaption>
+                        <figcaption itemprop="caption description">School Premises (rear view)</figcaption>
                     </figure>
                 </li>
                 <li>
 
                 <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                        <a href="resources/img/gallery-6.jpg" title="Annual Sports Ceremony" itemprop="contentUrl" data-size="1024x768"> 
-                        <img src="resources/img/gallery-6.jpg" alt="Gallery-6" itemprop="thumbnail">
+                        <a href="resources/img/gallery-3.jpg" title="School Corridor" itemprop="contentUrl" data-size="1024x768"> 
+                        <img src="resources/img/gallery-3.jpg" alt="Gallery-3" itemprop="thumbnail">
                         </a>
-                        <figcaption itemprop="caption description">Annual Sports Ceremony</figcaption>
+                        <figcaption itemprop="caption description">School Corridor</figcaption>
                     </figure>
 
                 </li>
@@ -246,9 +246,9 @@
 
                  <li>
                     <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/VideoObject">
-                        <a  href="#" title="Annual Closing Ceremony" data-type="video" data-video='<div class="wrapper"><div class="video-wrapper"><iframe class="pswp__video" width="853" height="480" src="https://www.youtube.com/embed/tdSB8Zyzz7s" frameborder="0"  allowfullscreen></iframe></div></div>' >
+                        <a  href="#" title="Children are dancing on stage" data-type="video" data-video='<div class="wrapper"><div class="video-wrapper"><iframe class="pswp__video" width="853" height="480" src="https://www.youtube.com/embed/tdSB8Zyzz7s" frameborder="0"  allowfullscreen></iframe></div></div>' >
                         <img src="resources/img/gallery-4.png" alt="Gallery-4" itemprop="thumbnail"></a>                      
-                        <figcaption itemprop="caption description">Annual Closing Ceremony</figcaption>
+                        <figcaption itemprop="caption description">Children are dancing on stage</figcaption>
                     </figure>
 
               </li>
@@ -257,31 +257,65 @@
              <ul class="gallery-showcase clearfix" itemscope itemtype="http://schema.org/ImageGallery">
                 <li>
                     <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                        <a href="resources/img/gallery-7.jpg" title="Annual Sports Ceremony" itemprop="contentUrl" data-size="1024x768">
-                        <img src="resources/img/gallery-7.jpg" alt="Gallery-5" itemprop="thumbnail"></a>
-                        <figcaption itemprop="caption description">Annual Sports Ceremony</figcaption>
+                        <a href="resources/img/gallery-5.jpg" title="Display of Annual Sports Ceremony" itemprop="contentUrl" data-size="1024x768">
+                        <img src="resources/img/gallery-5.jpg" alt="Gallery-5" itemprop="thumbnail"></a>
+                        <figcaption itemprop="caption description">Display of Annual Sports Ceremony</figcaption>
                     </figure>
                 </li>
                 <li>
                    <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/VideoObject">
-                        <a  href="#" title="Annual Sports Ceremony Display"
-                                       data-type="video" data-video='<div class="wrapper"><div class="video-wrapper"><iframe class="pswp__video" width="640" height="480" src="https://www.youtube.com/embed/NdHsGZTsUQ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>'><img src="resources/img/video-2.png" alt="Gallery-4" itemprop="thumbnail"></a>
-                         <figcaption itemprop="caption description">Annual Sports Ceremony Display</figcaption>               
+                        <a  href="#" title="Display of Annual Sports Ceremony"
+                                       data-type="video" data-video='<div class="wrapper"><div class="video-wrapper"><iframe class="pswp__video" width="640" height="480" src="https://www.youtube.com/embed/NdHsGZTsUQ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>'>
+                                       <img src="resources/img/gallery-6.png" alt="Gallery-4" itemprop="thumbnail"></a>
+                         <figcaption itemprop="caption description">Display of Annual Sports Ceremony</figcaption>               
                     </figure>
 
                 </li>
                  <li>
                     <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                        <a  href="resources/img/gallery-8.jpg" title="Annual Closing Ceremony" itemprop="contentUrl" data-size="1024x768"> 
-                        <img src="resources/img/gallery-8.jpg" alt="Gallery-8" itemprop="thumbnail"></a>
-                        <figcaption itemprop="caption description">Annual Closing Ceremony</figcaption>
+                        <a  href="resources/img/gallery-7.jpg" title="Display of Annual Sports Ceremony" itemprop="contentUrl" data-size="1024x768"> 
+                        <img src="resources/img/gallery-7.jpg" alt="Gallery-8" itemprop="thumbnail"></a>
+                        <figcaption itemprop="caption description">Display of Annual Sports Ceremony </figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                        <a href="resources/img/gallery-5.jpg" title="Annual Sports Ceremony" itemprop="contentUrl" data-size="1024x768">
-                        <img src="resources/img/gallery-5.jpg" alt="Gallery-7" itemprop="thumbnail"></a>
-                        <figcaption itemprop="caption description">Annual Sports Ceremony</figcaption>
+                        <a href="resources/img/gallery-8.jpg" title="Children are playing" itemprop="contentUrl" data-size="1024x768">
+                        <img src="resources/img/gallery-8.jpg" alt="Gallery-7" itemprop="thumbnail"></a>
+                        <figcaption itemprop="caption description">Children are playing</figcaption>
+                    </figure>
+                </li>
+
+            </ul>
+
+            <ul class="gallery-showcase clearfix" itemscope itemtype="http://schema.org/ImageGallery">
+                <li>
+                    <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                        <a href="resources/img/gallery-9.jpg" title="Children are playing" itemprop="contentUrl" data-size="1024x768">
+                        <img src="resources/img/gallery-9.jpg" alt="Gallery-9" itemprop="thumbnail"></a>
+                        <figcaption itemprop="caption description">Children are playing</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                        <a href="resources/img/gallery-10.jpg" title="Speech of Annual Closing Ceremony" itemprop="contentUrl" data-size="1024x768">
+                        <img src="resources/img/gallery-10.jpg" alt="Gallery-10" itemprop="thumbnail"></a>
+                        <figcaption itemprop="caption description">Speech of Annual Closing Ceremony</figcaption>
+                    </figure>
+
+                </li>
+                 <li>
+                    <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                        <a  href="resources/img/gallery-11.jpg" title="Drawing competition" itemprop="contentUrl" data-size="1024x768"> 
+                        <img src="resources/img/gallery-11.jpg" alt="Gallery-11" itemprop="thumbnail"></a>
+                        <figcaption itemprop="caption description">Drawing Competition</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                        <a href="resources/img/gallery-12.jpg" title="Dance class" itemprop="contentUrl" data-size="1024x768">
+                        <img src="resources/img/gallery-12.jpg" alt="Gallery-12" itemprop="thumbnail"></a>
+                        <figcaption itemprop="caption description">Dance Class On Saturday</figcaption>
                     </figure>
                 </li>
 
