added notice board in header navigation

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                    <li><a href="#gallery" id="galleryMenuItem">Gallery</a></li>
                    <li><a href="#location" id="locationMenuItem">Our location</a></li>
                    <li><a href="#admissionInfo" id="admissionInfoMenuItem">Admission information</a></li>
+                   <li><a href="#" class="footer_a_3">Notice Board</a></li>
                    <li><select name="lang" id="lang" required>
                            <option value="">&nbsp;</option>                               
                            <option value="bn" selected>বাঙলা</option>
@@ -102,7 +103,7 @@
         <div class="hero-text-box">
             <h1 id="dialogue-header">Your child, it's our responsibility to develop his/her intellect.</h1>
             <a class="btn btn-full js--scroll-to-plans" href="#" id="header-button-1">I'm interested</a>
-            <a class="btn btn-ghost js--scroll-to-start" href="#" id="header-button-2">Show me more</a>
+            <a class="btn btn-ghost js--scroll-to-feature" href="#" id="header-button-2">Show me more</a>
             
             <h1 id="school-name">Mother Teresa Catholic School</h1>
         </div>  
@@ -113,7 +114,7 @@
                 <span class="header-primary-sub" id="dialogue-header">Your child, it's our responsibility to develop his/her intellect.</span>
             </h1>
             <a class="btn btn-full btn-animated js--scroll-to-testimonials" href="#" id="header-button-1">Parents' opinion</a>
-            <a class="btn btn-full btn-animated js--scroll-to-start" href="#" id="header-button-2">Show me more</a>
+            <a class="btn btn-full btn-animated js--scroll-to-feature" href="#" id="header-button-2">Show me more</a>
         </div>
 
 <!--        <div class="school-name"><h1>Mother Teresa Catholic School</h1></div> -->
@@ -550,7 +551,7 @@
                     <ul class="footer-nav">
                         <li><a href="#aboutUs" id="footer_a_1">About Us</a></li>
                         <li><a href="#location" id="footer_a_2">Contact Us</a></li>
-                        <li><a href="#" id="footer_a_3">Notice Board</a></li>
+                        <li><a href="#" class="footer_a_3">Notice Board</a></li>
                         <li><a href="#" id="footer_a_4">Teachers Panel</a></li>
                         
                     </ul>
