--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta property="og:title" content="Mother Teresa Catholic School, Pallabi, Dhaka-1216" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://mtcspallabi.github.io" />
-        <meta property="og:image" content="https://mtcspallabi.github.io/resources/img/mcts.jpg" />
+        <meta property="og:image" content="https://mtcspallabi.github.io/resources/img/gallery-1.jpg" />
         <meta property="og:image:width" content="600" />
         <meta property="og:image:height" content="315" />
         <meta property='og:site_name' content='MTCS' />
