added a new video

--- a/index.html
+++ b/index.html
@@ -297,14 +297,7 @@
                         <figcaption itemprop="caption description">Children are playing</figcaption>
                     </figure>
                 </li>
-                <li>
-                    <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                        <a href="resources/img/gallery-10.jpg" title="Speech of Annual Closing Ceremony" itemprop="contentUrl" data-size="1024x768">
-                        <img src="resources/img/gallery-10.jpg" alt="Gallery-10" itemprop="thumbnail"></a>
-                        <figcaption itemprop="caption description">Speech of Annual Closing Ceremony</figcaption>
-                    </figure>
-
-                </li>
+               
                  <li>
                     <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                         <a  href="resources/img/gallery-11.jpg" title="Drawing competition" itemprop="contentUrl" data-size="1024x768"> 
@@ -318,6 +311,21 @@
                         <img src="resources/img/gallery-12.jpg" alt="Gallery-12" itemprop="thumbnail"></a>
                         <figcaption itemprop="caption description">Dance Class On Saturday</figcaption>
                     </figure>
+                </li>
+                <li>
+                    <!-- <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                        <a href="resources/img/gallery-10.jpg" title="Speech of Annual Closing Ceremony" itemprop="contentUrl" data-size="1024x768">
+                        <img src="resources/img/gallery-10.jpg" alt="Gallery-10" itemprop="thumbnail"></a>
+                        <figcaption itemprop="caption description">Speech of Annual Closing Ceremony</figcaption>
+                    </figure> -->
+                    <figure class="gallery-photo" itemprop="associatedMedia" itemscope itemtype="http://schema.org/VideoObject">
+                        <a  href="#" title="Patriotic song represented by our students on annual closing ceremony"
+                                       data-type="video" data-video='<div class="wrapper"><div class="video-wrapper"><iframe class="pswp__video" width="640" height="480" src="https://www.youtube.com/embed/uUFqoyruCcI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>'>
+                                       <img src="resources/img/gallery-10.png" alt="Gallery-10" itemprop="thumbnail"></a>
+                         <figcaption itemprop="caption description">Patriotic song represented by our students on annual closing ceremony</figcaption>               
+                    </figure>
+
+
                 </li>
 
             </ul>
