added flex container for gallery

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
             
         </section>
 
-
+<!-- 
         <section class="section-book">
                 <div class="row">
                         <h2 id="form_h2_1">We're happy to hear from you</h2>
@@ -533,7 +533,7 @@
 
                 </div>
             </div>
-        </section>
+        </section> -->
        
         <section class="section-form">
             <div class="row">
